--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="\Assets\CSS\style.css">
+    <link rel="stylesheet" href="/Assets/CSS/style.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
