--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
             </div>
         </main>
     </div>
-    <script src="\Assets\JavaScript\dashboard.js"></script>
+    <script src=".\Assets\JavaScript\dashboard.js"></script>
 </body>
 </html>
